# RealTimeAudioSpectrum

./: CMakeLists.txt  README.md  audiodata.cpp  audiodata.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  spectrum.cpp  spectrum.h
